fts_children: preserve errno after running close/fchdir

PR:		200942
Submitted by:	Conrad Meyer
Differential Revision: https://reviews.freebsd.org/D2852
MFC after:	1 week


git-svn-id: svn+ssh://svn.freebsd.org/base/head@284649 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f